--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -8,5 +8,32 @@
   --color-grey-6: #a6a8a9;
   --color-grey-7: #ffffff;
   --color-alert: #c22554;
+
   --font-primary: "Inter", sans-serif;
+
+  --title-size-1: 32px;
+  --title-size-2: 24px;
+  --title-size-3: 20px;
+
+  --title-weight-1: 600px;
+  --title-weight-2: 500px;
+  --title-weight-3: 400px;
+}
+
+.dark__mode {
+  --color-grey-7: #191c1f;
+  --color-grey-6: #212529;
+  --color-grey-4: #33363a;
+  --color-grey-3: #373b3e;
+  --color-grey-2: #a6a8a9;
+  --color-grey-1: #ffffff;
+}
+
+body{
+  margin: 0;
+  color: white;
+  background-color: #191c1f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
