--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,17 +1,20 @@
 .main__container{
-    display: flex;
-    flex-direction: row;
     width: 100%;
     height: 100vh;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: var(--color-grey-1);
+    font-family: var(--font-primary);
 }
+
+/* ESTILO LADO ESQUERDO */
 
 .aside__container{
     width: 40%;
     height: 90%;
-    background-color: var(--color-brand-1);
+    background-color: var(--color-brand-2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,12 +24,14 @@
 .aside__content{
     display: flex;
     flex-direction: column;
-    padding:0 5% 20% 5% ;
+    width: 60%;
 }
 
-.aside__content h1{
+.aside__content-title{
     margin-bottom: 2.5rem;
 }
+
+/* ESTILO PARTE DE PESQUISA */
 
 .search__container{
     width: 40%;
@@ -41,14 +46,36 @@
 .search__form{
     display: flex;
     flex-direction: column;
-    padding:0 5% 20% 5%;
+    width: 50%;
 }
 
-.search__span{
+.search__form-title{
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.search__form-span{
     margin-top: 2.5rem;
+    font-size: 14px;
 }
 
-.search__input{
+.search__form-input{
     margin: 1rem 0;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    border: 1px solid var(--color-grey-6);
+    background-color: var(--color-grey-1);
+    color: var(--color-grey-7);
 }
 
+.search__form-button{
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    border: none;
+    background-color: var(--color-brand-2);
+    color: var(--color-grey-7);
+}
+.search__form-button:hover{
+    background-color: var(--color-brand-1);
+    color: var(--color-grey-7);
+}
