--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -67,9 +67,8 @@ main{
 }
 
 .list__repos{
-    width: 575px;
-    min-width: 300px;
-    height: 18rem;
+    width: 35%;
+    height: 20rem;
     margin: 1rem 3rem 1rem 0;
     display: flex;
     flex-direction: column;
