--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -55,6 +55,7 @@ main{
     justify-content: center;
     align-items: center;
     padding-bottom: 6rem;
+    width: 100%;
 }
 
 .user__list{
@@ -64,6 +65,7 @@ main{
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: start;
+    width: 100%;
 }
 
 .list__repos{
